--- a/app/src/main/res/layout/fragment_all_products.xml
+++ b/app/src/main/res/layout/fragment_all_products.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true">
@@ -12,7 +11,6 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <SearchView android:id="@+id/search_it"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,14 +18,17 @@
             android:layout_alignParentTop="true"
             android:iconifiedByDefault="false"
             android:focusable="true"
-            android:focusableInTouchMode="true"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/carouselview"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
+            android:focusableInTouchMode="true"/>
+        <com.synnapps.carouselview.CarouselView
+            android:id="@+id/carouselview"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
-
+            android:layout_marginTop="6dp"
+            app:layout_constraintTop_toBottomOf="@+id/search_it"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view2"
@@ -42,27 +43,10 @@
             android:scrollbars="none"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/carouselview"
-
-            android:layout_marginTop="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <com.synnapps.carouselview.CarouselView
-            android:id="@+id/carouselview"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="6dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_it"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintHorizontal_bias="0.0" />
 
 
-        </com.synnapps.carouselview.CarouselView>
 
 
     </android.support.constraint.ConstraintLayout>
