--- a/app/src/main/res/layout/fragment_all_products.xml
+++ b/app/src/main/res/layout/fragment_all_products.xml
@@ -13,14 +13,16 @@
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/empty"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:drawablePadding="5dp"
             android:gravity="center"
             android:text="@string/no_data_available"
             android:textColor="@android:color/black"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:layout_editor_absoluteY="25dp"
+            tools:layout_editor_absoluteX="8dp" />
         <SearchView android:id="@+id/search_it"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,17 +30,16 @@
             android:layout_alignParentTop="true"
             android:iconifiedByDefault="false"
             android:focusable="true"
-            android:focusableInTouchMode="true"/>
+            android:focusableInTouchMode="true"
+            tools:layout_editor_absoluteY="25dp"
+            tools:layout_editor_absoluteX="0dp" />
         <com.synnapps.carouselview.CarouselView
             android:id="@+id/carouselview"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginTop="6dp"
             app:layout_constraintTop_toBottomOf="@+id/search_it"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            tools:layout_editor_absoluteX="0dp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view2"
